# treemap-hub

./: README.md
datasets/: .gitignore  firefox-s-layout.json  firefox-xs-layout.json  glbinding-sm.json  synthetic-xs-layout.json  synthetic-xs.json
datasets/csv/: glbinding-former.csv  glbinding-latest.csv
datasets/names-layouts/popular-names-hilbert-greedy-false-false-0.6/: 1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv
evaluation/: CMakeLists.txt
evaluation/cli-cpp/: CMakeLists.txt  main.cpp
evaluation/cli-cpp/export/: export.cpp  export.h  export.inl
evaluation/cli-py/: main.py  metricCalculation.py  mockdata.py  preprocessing.py  requirements.txt
evaluation/cli-py/metrics/: averageAspectRatio.py  locationDrift.py  relativeDirectionChange.py
evaluation/measurements/: CMakeLists.txt
evaluation/measurements/include/measurements/metrics/: AngularDisplacement.h  AspectRatio.h  DistanceChange.h  LocationDrift.h  RelativeDirectionChange.h  RelativeParentChange.h  RelativePositionChange.h  VisualChange.h
evaluation/measurements/source/metrics/: AngularDisplacement.cpp  AspectRatio.cpp  DistanceChange.cpp  LocationDrift.cpp  RelativeDirectionChange.cpp  RelativeParentChange.cpp  RelativePositionChange.cpp  VisualChange.cpp
source-cpp/: .gitignore  CMakeLists.txt  treemaphub-cpp-library-config.cmake
source-cpp/cmake/: FindKHR.cmake  GenerateTemplateExportHeader.cmake
source-cpp/tests/: CMakeLists.txt
source-cpp/tests/treemap-test/: CMakeLists.txt  attribute_preprocessing_test.cpp  tree_loading_test.cpp  treemap_layouting_test.cpp
source-cpp/treemap/: CMakeLists.txt
source-cpp/treemap/include/treemap/buffers/: AbstractLinearizedBuffer.h  LinearizedBuffer.h  LinearizedBuffer.inl
source-cpp/treemap/include/treemap/layout/: Rect.h  RectangularTreemapLayout.h
source-cpp/treemap/include/treemap/layouting/: AbstractRow.h  DirectionalRow.h  HilbertMoorePattern.h  RectangularLayoutAlgorithm.h  Row.h  SingleLevelApproximation.h  SingleLevelHilbertMoore.h  SingleLevelPivot.h  SingleLevelSliceNDice.h  SingleLevelSliceNDiceByLevel.h  SingleLevelSpiral.h  SingleLevelSquarified.h  SingleLevelStrip.h  SingleLevelStripInverted.h  Slice.h  SpiralRow.h  TreemapLayouter.h  WeightPartitioning.h
source-cpp/treemap/include/treemap/linearizedtree/: LinearizedTree.h  LinearizedTree.inl  LinearizedTreeNode.h  LinearizedTreeNode.inl
source-cpp/treemap/include/treemap/loading/: LinearizedCSVImporter.h
source-cpp/treemap/include/treemap/preprocessing/: AggregationType.h  AttributeSumAggregation.h  TreeProcessing.h
source-cpp/treemap/source/buffers/: AbstractLinearizedBuffer.cpp
source-cpp/treemap/source/layout/: Rect.cpp
source-cpp/treemap/source/layouting/: AbstractRow.cpp  DirectionalRow.cpp  Row.cpp  SingleLevelApproximation.cpp  SingleLevelHilbertMoore.cpp  SingleLevelPivot.cpp  SingleLevelSliceNDice.cpp  SingleLevelSliceNDiceByLevel.cpp  SingleLevelSpiral.cpp  SingleLevelSquarified.cpp  SingleLevelStrip.cpp  SingleLevelStripInverted.cpp  Slice.cpp  SpiralRow.cpp  TreemapLayouter.cpp  WeightPartitioning.cpp
source-cpp/treemap/source/linearizedtree/: LinearizedTree.cpp  LinearizedTreeNode.cpp
source-cpp/treemap/source/loading/: LinearizedCSVImporter.cpp
source-cpp/treemap/source/preprocessing/: AttributeSumAggregation.cpp  TreeProcessing.cpp
source-ts/: README.md  karma.common.js  karma.config.js  karma.watch-and-debug.config.js  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.config.min.js  webpack.dev.js  webpack.prod.js
source-ts/data/: first500.json
source-ts/source/: fibonacci.ts  prettyprint.ts  treemap-layout.ts
source-ts/tests/: fibonacci.test.ts
viewer/: .eslintignore  .eslintrc  .gitignore  .prettierrc.json  README.md  index.html  jest.config.js  karma.base.config.js  karma.common.js  karma.config.js  karma.default.js  karma.watch-and-debug.config.js  karma.watch-and-debug.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.config.min.js  webpack.dev.js  webpack.prod.js
viewer-cli/: Readme.md  treemap-cli.ts
viewer/scripts/: compile-shader.ts  compile-shaders.js  shaders-plugin.ts
viewer/source/: renderer.ts  treemap-2d.ts  treemap-node.ts  vertex.ts
viewer/source/app/: main.ts  style.css
viewer/source/assets/shaders/: depth.frag.glsl  outlines.frag.glsl  outlines.vert.glsl  shader.frag  shader.frag.glsl  shader.vert
viewer/source/assets/shaders/glsl/: default.vert.glsl  depth.frag.glsl  outlines.vert.glsl
viewer/source/assets/shaders/wgsl/: default.vert.wgsl  depth.frag.wgsl  outlines.frag.wgsl  outlines.vert.wgsl
viewer/source/types/: treemap.ts  utils.ts
viewer/source/utils/: array-helper.ts  buffer-helper.ts  color-scheme-helper.ts  shader-helper.ts
viewer/test-app/: index.html  main.js
viewer/tests/: renderer.test.ts
